--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express": "^4.17.3",
     "express-basic-auth": "^1.2.1",
     "fs": "^0.0.1-security",
+    "get-stream": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "md5-file": "^5.0.0",
@@ -60,6 +61,7 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.13.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
