--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,9 @@
 PORT=8080
 TYPEORM_HOST=localhost
 TYPEORM_PORT=5432
-TYPEORM_DATABASE=postgres
+TYPEORM_DATABASE=computer-master
 TYPEORM_USERNAME=postgres
-TYPEORM_PASSWORD=changeme
+TYPEORM_PASSWORD=
 AUTH_JWT_SECRET_KEY=
 
 MAIL_PORT=2525
